Update SF 4.4 + test full local with sqlite

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -18,7 +18,7 @@
         <li>
             Modifier l'APIController pour ne pas renvoyer une 500 si l'article demandé n'existe pas (avec moins de code qu'actuellement, si possible)
             <br>
-            <a href="http://test.comiteo.localhost/api/v1/articles/1337">http://test.comiteo.localhost/api/v1/articles/1337</a>
+            <a href="/api/v1/articles/1337">/api/v1/articles/1337</a>
         </li>
         <li>
             Création d'une route Api pour créer un article
@@ -40,7 +40,7 @@
         <li>
             Faire évoluer l'ApiController pour qu'il renvoie l'auteur dans la réponse json
         <br>
-            <a href="http://test.comiteo.localhost/api/v1/articles/1">http://test.comiteo.localhost/api/v1/articles/1</a>
+            <a href="/api/v1/articles/1">/api/v1/articles/1</a>
         </li>
         <li>
             Créer un service qui renvoit le nombre d'articles pour un Author donné
